k8s/client-delopy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shopping-list
  name: client
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: familyarchive.life:5000/shopping-list/client:1.0
        imagePullPolicy: Never
