k8s/server-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shopping-list
  name: server
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: image_repo:5000/shopping-list/server:1.0
        ports:
        - containerPort: 8080
