k8s/client-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: shopping-list
spec:
  ports:
  - port: 80
  selector:
    app: client
