k8s/server-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: shopping-list
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: server
