k8s/server-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-http01-prod
  name: server
  namespace: shopping-list
spec:    
  ingressClassName: nginx
  tls:
  - hosts:
    - shopping-list-server.lewes.family
    secretName: cert-shopping-list-server-lewes-family-key-pair
  rules:
  - host: shopping-list-server.lewes.family
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server
            port:
              number: 8080
